--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "joi": "^17.12.2",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
+    "passport-facebook": "^3.0.0",
     "passport-google-oauth2": "^0.2.0",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
